Lots of refactoring New classes
git-svn-id: file:///home/laga/uni/WS1011/ir/repo@10 363a596b-6ee8-4a37-ab8d-e0bad386b831

--- a/SearchAndFind/pom.xml
+++ b/SearchAndFind/pom.xml
@@ -37,5 +37,10 @@
             <artifactId>jnotify</artifactId>
             <version>0.93</version>
         </dependency>
+        <dependency>
+            <groupId>jmimemagic</groupId>
+            <artifactId>jmimemagic</artifactId>
+            <version>0.1.2</version>
+        </dependency>
     </dependencies>
 </project>
