--- a/SearchAndFind/pom.xml
+++ b/SearchAndFind/pom.xml
@@ -42,5 +42,20 @@
             <artifactId>jmimemagic</artifactId>
             <version>0.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jtidy</groupId>
+            <artifactId>jtidy</artifactId>
+            <version>r938</version>
+        </dependency>
+        <dependency>
+            <groupId>net.htmlparser.jericho</groupId>
+            <artifactId>jericho-html</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 </project>
